# crypto-payment-gateway

./: .env.example  Cargo.toml  README.md  docker-compose.yaml  thunder-collection_crypto-payment-gateway.json
migration/src/: lib.rs  m20221208_222429_create_user_table.rs  m20221212_153800_create_network_table.rs  m20221212_153837_create_crypto_currency_table.rs  m20221212_153934_create_wallet_table.rs  m20221215_153723_create_wallet_transaction_table.rs  m20221215_153841_create_fiat_currency_table.rs  m20221215_153911_create_payment_table.rs  m20221215_153937_create_user_transaction_table.rs
src/: config.rs  errors.rs  macros.rs  main.rs
src/dtos/: user.rs
src/entities/: crypto_currency.rs  fiat_currency.rs  mod.rs  network.rs  payment.rs  prelude.rs  user.rs  user_transaction.rs  wallet.rs  wallet_transaction.rs
src/errors/: auth.rs  internal.rs  mod.rs  not_found.rs  payment.rs
src/handlers/: asset_handler.rs  auth_handler.rs  mod.rs  payment_handler.rs  user_handler.rs  ws_handler.rs
src/models/: dtos.rs  mod.rs  ws.rs
src/security/: hash.rs  jwt.rs  mod.rs
src/services/: crypto_currency_service.rs  fiat_currency_service.rs  kucoin_api_service.rs  mod.rs  network_service.rs  payment_service.rs  user_service.rs  user_transaction_service.rs  wallet_service.rs  wallet_transaction_service.rs  web3_service.rs
