[package]
name = "crypto-payment-gateway"
version = "1.0.0"
edition = "2021"

[workspace]
members = [".", "migration" ]

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-web-grants = "3.0.1"
actix-web-httpauth = "0.8.0"
actix-web-validator = "5.0.1"
actix-ws = "0.2.5"
argon2 = "0.4.1"
chrono = "0.4.23"
config = "0.13.3"
derive_more = "0.99.17"
dotenvy = "0.15.6"
env_logger = "0.10.0"
ethers = { version = "1.0.2", features = ["ws", "rustls", "openssl"] }
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
jsonwebtoken = "8.2.0"
log = "0.4.17"
migration = { path = "migration" }
reqwest = { version = "0.11.13", features = ["json"] }
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
tokio = "1.23.0"
validator = { version = "0.16.0", features = ["derive", "phone"] }
